change some minor things

--- a/src/content/docs/aperture/overview.mdx
+++ b/src/content/docs/aperture/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: Welcome...
-description: About the docs
+title: Aperture
+description: Documentation for the upcoming Aperture pipeline
 tableOfContents: false
 sidebar:
   label: Overview
