mod: beginner guide: updated tutorials 0, 1, 2, and 3

--- a/src/content/docs/current/Guides/Your First Shader/2_gbuffers.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/2_gbuffers.mdx
@@ -10,7 +10,7 @@ sidebar:
 This tutorial is still being developed. Some statements may be incorrect, and things may change in the future. Got any feedback? [Comment on the tracking issue](https://github.com/IrisShaders/DocsPage/issues/327).
 :::
 
-In this next section, we will start with a fresh copy of the base 330 pack, instead of using the monochrome version we made in the previous step. You could also just remove the line you added to `composite.fsh`.
+In this next section, we will start with a fresh copy of the Base-330 pack, instead of using the grayscale version we made in the previous step. You could also just remove the lines you added to `composite.fsh`.
 
 For the purposes of this tutorial, we will only be covering the shading of terrain. Therefore, it is worth deleting all other files starting with `gbuffers_`. You can also get rid of the `deferred` files. You should now just have
 
@@ -26,7 +26,7 @@ For the purposes of this tutorial, we will only be covering the shading of terra
 								└── gbuffers_terrain.vsh
 ```
 
-:::note[Info]
+:::note[Note]
 When a gbuffers program is not present, Iris will fall back to using the most similar program that exists. If no such similar program exists, a built in one will be used instead. See [the docs](/current/reference/programs/gbuffers/) for more info.
 :::
 
@@ -54,7 +54,8 @@ You will notice that this time, there are three `out` variables. Let's go over e
 In the previous tutorial, we had a variable called `texcoord`, which gave us the texture coordinate onscreen of the given fragment. In the gbuffers, the texture coordinate instead represents the coordinate in the *texture atlas*. The texture atlas contains the textures of every block. We will cover this in the next section.
 
 ### `lmcoord`
-This represents the coordinate in the lightmap which we are going to use to determine how lit the current fragment is. As explained in the introduction, we are going to do our own maths to correctly interpret this coordinate. The actual range of the lightmap (stored in `gl_MultiTexCoord1`) varies betweeen Minecraft versions but by multiplying it by `gl_TextureMatrix[1]` we instead get it in the range ~0.033-~097. This still isn't very useful but we can fix this ourselves. Let's add a new line below the one assigning `lmcoord`.
+
+Minecraft calculates two values that represent how lit a block is: the exposure to emissive blocks (torches, lava, glowstone, etc.) and the exposure to the sky. These values are stored in `gl_MultiTexCoord1` as "lightmap coordinates", where the x channel encodes block exposure and the y channel sky exposure. The actual range of these values varies between Minecraft versions, but by multiplying it by `gl_TextureMatrix[1]` we instead get it in the approximate range [0.033, 0.97]. This still isn't very useful but we can fix this ourselves. Let's add a new line below the one assigning `lmcoord`.
 
 ```glsl
 lmcoord = (lmcoord * 33.05 / 32.0) - (1.05 / 32.0);
@@ -78,7 +79,7 @@ out vec3 normal;
 
 So how do we get this normal? Well, OpenGL provides it to us with `gl_Normal`. This is in *model space*, though, and for simplicity, we want it in *player space*. This means that the direction is relative to the orientation and position of the player, instead of the model (i.e the chunk being rendered). In `main`, let's add some code for that. The justification for transforming to player space will be explained later on.
 
-:::note[Info]
+:::note[Note]
 Player space and world space may be referred to interchangeably for normals. *Player space* has all positions relative to the player, aligned along the world's x, y, and z axes. World space instead has positions relative to (0,0,0) in the world. Because the orientation of both coordinate spaces is the same, normals (and other direction vectors) are identical between world space and player space.
 :::
 
@@ -87,7 +88,7 @@ normal = gl_NormalMatrix * gl_Normal; // this gives us the normal in view space
 normal = mat3(gbufferModelViewInverse) * normal; // this converts the normal to world/player space
 ```
 
-If you reload your shader, you will notice that there is an error that we have not defined `gbufferModelViewInverse`. To get this value, we declare it as a *uniform* before the `main` function. Uniforms are accessable by any shader program and have the same value wherever you access them. They are calculated on the CPU and uploaded to the GPU.
+If you reload your shader, you will notice that there is an error that we have not defined `gbufferModelViewInverse`. To get this value, we declare it as a `uniform` before the `main` function. Uniforms are accessable by any shader program and have the same value wherever you access them. They are calculated on the CPU and uploaded to the GPU.
 
 ```glsl
 uniform mat4 gbufferModelViewInverse;
@@ -107,7 +108,7 @@ Remember how by default, Minecraft uses a texture with colors for each light lev
 
 Next, you'll notice that we are writing to `colortex0`. This is generally where most shaders store the main image, with supplementary info in the other buffers. For example, you could store the light levels in `colortex1`, and use them for lighting in `composite`. In fact, we are going to do exactly that.
 
-:::note[Info]
+:::note[Note]
 You might be wondering why you'd do lighting in a fullscreen pass, when you could just do it here and now and save writing to a buffer. This is known as *forward rendering*, and while simpler, there are a few downsides. Doing our lighting requires everything rendered by gbuffers to be lit. As our lighting code gets more complicated, this can add significant overhead. Instead, we will be doing *deferred rendering*, where the lighting calculations are run once all geometry has been rendered, ensuring that only things which are visible onscreen get the expensive lighting calculations.
 :::
 
@@ -128,7 +129,9 @@ color.rgb = normal;
 ![](../../../../../assets/beginner_tutorial/normals.webp)
 You can see that faces that face upwards are green. Colors are stored in the `rgba` format and vectors/coordinates in the `xyzw` format. Since both of these are stored in the same `vec4` format, this means that the `r` component represents the `x` component, and so on. Since `g` represents `y`, this means that if the face is green, then the normal must only have a value in the `y` component, and hence is facing upwards.
 
-You'll notice some faces are black, this is where the normals are negative - you cannot have a negative color!
+:::tip[Negative Normals]
+You'll notice some faces are black. This occurs when the normals are negative, since you cannot have a negative color! 
+:::
 
 Again, let's undo this, as it is not how we want our shader to look.
 
@@ -143,7 +146,7 @@ if (color.a < 0.1) { // alpha test
 ```
 
 - The first step multiplies the color by `glcolor` to get the biome tint.
-- The second step multiplies the color by the lighting color. **You should remove this, as we are going to do our own lighting.**
+- The second step multiplies the color by Minecraft's defualt lighting color. **You should remove this, as we are going to do our own lighting.**
 - Finally, if the color's alpha (transparency) is less than 0.1, we `discard`, which tells the shader program to return and not write anything. This potentially saves us some texture writes.
 
 ## Writing Extra Data
@@ -176,8 +179,8 @@ lightmapData = vec4(lmcoord, 0.0, 1.0);
 encodedNormal = vec4(normal * 0.5 + 0.5, 1.0);
 ```
 
-There are a couple of things here to note. First of all, we *always set the alpha to 1*. This is to ensure that the data always gets written, because if the alpha is 0, Iris may decide that it shouldn't be written anyway. This is because of alpha blending. See [LearnOpenGL's page on blending](https://learnopengl.com/Advanced-OpenGL/Blending) for more info.
+There are a couple of things here to note. First of all, we *always set the alpha to 1.0*. This is to ensure that the data always gets written, because if the alpha is 0, Iris may decide that it shouldn't be written anyway. This is because of alpha blending. See [LearnOpenGL's page on blending](https://learnopengl.com/Advanced-OpenGL/Blending) for more info.
 
-Secondly, for each component of the normal, we half it and add a half. Remember how you can't have a negative color? By default, a texture can only store numbers between 0.0 and 1.0. Since each component can range from `-1.0-1.0`, we need to put it in the 0-1 range.
+Secondly, since textures by default can only store numbers between 0.0 and 1.0, we must convert our components - which can range from -1.0 to 1.0 - into the [0, 1] range.
 
-With that said and done, we are set to do some lighting in the composite pass.
+With that said and done, we are set to do some lighting in the `composite` passes.
