Update src/content/docs/current/Guides/Your First Shader/1_composite.mdx
Co-authored-by: Josh Britain <50422789+jbritain@users.noreply.github.com>

--- a/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
@@ -56,7 +56,7 @@ Let's analyse this.
 #version 330 compatibility
 ```
 
-Every shader's first line must be a version declaration. GLSL has two profiles: `compatibility` and `core`. Iris is better at patching the `compatibility` profile, so in the context of Minecraft there's no benefit to using `core`.
+Every shader's first line must be a version declaration. GLSL has two profiles: `compatibility` and `core`. Iris is better at patching the `compatibility` profile, so in this case there is no benefit to using `core`.
 
 ```glsl
 out vec2 texcoord;
