Update src/content/docs/current/Guides/Your First Shader/1_composite.mdx
Co-authored-by: Josh Britain <50422789+jbritain@users.noreply.github.com>

--- a/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
@@ -72,7 +72,7 @@ Values passed from vertex shaders to fragment shaders are interpolated! This mea
 void main() {
 ```
 
-The `main` function is the code that is run when the shader is invoked, just like in C.
+The `main` function is invoked when the shader program runs, just like in C.
 
 ```glsl
 gl_Position = ftransform();
